# trade-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
trade_analysis/: __main__.py  cli.py  core.py  utils.py
