[tool.poetry]
name = "trade-analysis"
version = "0.1.0"
description = ""
authors = ["gaverdugo <7308497+gaverdugo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
typer = "^0.9.0"
rich = "^13.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
